fix spacing and responsive ui on small screens

--- a/src/styles/RainbowContainer.module.css
+++ b/src/styles/RainbowContainer.module.css
@@ -21,11 +21,18 @@
 }
 
 .transparencyOverRainbow {
-  padding: 1.35rem;
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
   background: rgba(243, 240, 249, 0.8);
   border-radius: 15px;
   text-align: center;
-  min-width: 500px;
-  width: 720px;
+  min-width: 95%;
   max-width: 100%;
+}
+
+@media screen and (min-width: 400px) {
+  .transparencyOverRainbow {
+    padding: 1.35rem;
+  }
 }
